--- a/main.html
+++ b/main.html
@@ -1,1 +1,12 @@
-<!doctype html><html lang="en"><head><meta charset="UTF-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/><title>Display Approval Management: Exhibitor's Dashboard</title><script defer="defer" src="main/bundle.js"></script></head><body><div id="root"></div></body></html>
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Display Approval Management: Exhibitor's Dashboard</title>
+  <script defer src="main/bundle.js"></script></head>
+  <body>
+	
+    <div id="root"></div>
+  </body>
+</html>
