--- a/view_rfda_edit_history.html
+++ b/view_rfda_edit_history.html
@@ -1,11 +1,1 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>View Request for Display Approval Edit History</title>
-  <script defer src="view_rfda_edit_history/bundle.js"></script></head>
-  <body>
-    <div id="root"></div>
-  </body>
-</html>
+<!doctype html><html lang="en"><head><meta charset="UTF-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/><title>View Request for Display Approval Edit History</title><script defer="defer" src="view_rfda_edit_history/bundle.js"></script></head><body><div id="root"></div></body></html>
